Fixing ms-overflow-style, closes #257

--- a/excelsior/scss/excelsior/components/_global.scss
+++ b/excelsior/scss/excelsior/components/_global.scss
@@ -1,10 +1,8 @@
 // Base styles
 // -----------------------
 
-html {
-    @include degrade-from(touch) {
-        -ms-overflow-style: scrollbar; // Stops IE10 from plopping a scroller over your content
-    }
+html.no-touch {
+    -ms-overflow-style: scrollbar; // Stops IE10 from plopping a scroller over your content
 }
 
 body {
