--- a/excelsior/scss/excelsior/components/_print.scss
+++ b/excelsior/scss/excelsior/components/_print.scss
@@ -1,12 +1,26 @@
 @media print {
     // Hide navigation and banner
     .skip-to,
-    .pull-down-container, .pull-down, .gripper,
-    .gov-bar, .gov-wrap,
-    .site-bar, .site-wrap, .site-title, .site-functions,
-    .mobile-functions, .mobile-functions ul, .mobile-functions li, .mobile-functions a,
-    .global-nav *, .off-canvas .global-nav, .global-nav .nav-container, .nav-container,
-    .nav-container ul, .nav-container li, .nav-container a,
+    .pull-down-container,
+    .pull-down,
+    .gripper,
+    .gov-bar,
+    .gov-wrap,
+    .site-bar,
+    .site-wrap,
+    .site-title,
+    .site-functions,
+    .mobile-functions,
+    .mobile-functions ul,
+    .mobile-functions li,
+    .mobile-functions a,
+    .global-nav *,
+    .off-canvas .global-nav,
+    .global-nav .nav-container,
+    .nav-container,
+    .nav-container ul,
+    .nav-container li,
+    .nav-container a,
     footer {
         display: none !important;
         visibility: hidden !important;
